# pysynphot

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CITATION  ETCSERVER.BAT  LICENSE.md  MANIFEST.in  README  README.rst  ROADMAP.md  conftest.py  defsetup.py  hack_the_tute.ipynb  new_setup.cfg  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci_workflows.yml  publish-to-pypi.yml
commissioning/: acs_effstim_cases.py  basecase.py  doscalars.py  genscience.py  nicmos_effstim_cases.py  printversion.py  runversion.csh  stis_effstim_cases.py
commissioning/acceptance/: mark_array_ok.py
commissioning/convert/: commissioning_cases.py  conv_base.py  convertcases.py
commissioning/extrap/: extrap.py  remove_unpinned.py
data/wavecat/: cos_fuv_g130m_1291.txt  cos_fuv_g130m_1300.txt  cos_fuv_g130m_1309.txt  cos_fuv_g130m_1327.txt  cos_fuv_g130m_c1291.txt  cos_fuv_g140l_1105.txt  cos_fuv_g140l_1230.txt  cos_fuv_g160m_1577.txt  cos_fuv_g160m_1589.txt  cos_fuv_g160m_1600.txt  cos_fuv_g160m_1611.txt  cos_fuv_g160m_1623.txt  cos_mirror.txt  cos_nuv_g185m_1786.txt  cos_nuv_g185m_1817.txt  cos_nuv_g185m_1864.txt  cos_nuv_g185m_1900.txt  cos_nuv_g185m_1913.txt  cos_nuv_g185m_1941.txt  (+26 more)
doc/: rtd-pip-requirements
lib/: Cache.py  __init__.py  catalog.py  client.py  etc.py  etc_test.py  etcserver.py  exceptions.py  extinction.py  graphtab.py  locations.py  magnitudes.py  newetc.py  newobs_cases.py  newobs_test.py  newobservation.py  obsbandpass.py  observation.py  observationmode.py  planck.py  reddening.py  renorm.py  server.py  spark.py  spectrum.py  spparser.py  test.py  tickettest.py  ui_test.py  units.py  v0.2_test.py  v0p2_test.py  wavetable.py
planning/: builds.txt  endstage.txt  etc_icd.txt  etc_pysynphot_testplan.txt  non_etc_requirements.txt  pinned_throughput.txt  pysyn_etc_acceptance_testing.txt  syn_functionality.txt
pysynphot/: Cache.py  __init__.py  binning.py  catalog.py  compat.py  conftest.py  etc.py  exceptions.py  extinction.py  graphtab.py  locations.py  obsbandpass.py  observation.py  observationmode.py  planck.py  reddening.py  refs.py  renorm.py  spark.py  spectrum.py  spparser.py  tables.py  units.py  wavetable.py
src/: pysynphot_utils.c
test/: Testfiles  auto_test  cos_etc_test.py  cos_etc_tickets.py  cos_fuv_cases.py  cos_nuv_cases.py  cos_tests.py  etctest_base_class.py  exceptions_test.py  exercise_etc_server.py  flip.py  init.doctest  newobs_cases.py  newobs_test.py  newobs_ticket_cases.py  other_etc_test.py  other_etc_ticket_cases.py  parse_etc_testcases.py  pdk_environment  renorm_test.py  runtests.py  spectest.py  test_analytic_spectrum.py  test_box.py  test_catalog.py  test_center_edges.py  test_comp.py  test_component_switch.py  test_graph.py  test_interpolated_spectral_element.py  test_locations.py  test_mergewavesets.py  test_obs.py  test_obsbandpass.py  test_observation.py  test_observation_binflux.py  test_observation_binwave.py  test_parsing.py  test_primary_area.py  test_set_default_waveset.py  (+36 more)
(+6073 files in other folders)
