[metadata]
name = pysynphot
version = 0.9.2.dev
author = Vicki Laidler, Matt Davis, Robert Jedrzejewski, Ivo Busko
author-email = help@stsci.edu
summary = Python Synthetic Photometry Utilities
description-file = README
home-page = http://projects.scipy.org/astropy/astrolib
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist =
    numpy (>=1.5.1)
    pyfits (>=3.0)

[files]
packages = pysynphot
data_files =
    data/generic/* = pysynphot/data
    data/wavecat/* = pysynphot/data

[extension=pysynphot.pysynphot_utils]
sources = src/pysynphot_utils.c
include_dirs = numpy
optional = True
fail_message = 
    *********************************************************
    Build failed, trying without C extension.
    This removes no functionality but may affect performance.
    *********************************************************


[global]
setup-hooks =
    stsci.distutils.hooks.version_setup_hook
    stsci.distutils.hooks.glob_data_files
commands = stsci.distutils.command.build_optional_ext.build_optional_ext

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook
