[metadata]
name = pysynphot
version = 0.9.8.dev
author = Vicki Laidler, Matt Davis, Robert Jedrzejewski, Ivo Busko
author-email = help@stsci.edu
summary = Python Synthetic Photometry Utilities
description-file = README
home-page = https://trac.assembla.com/astrolib/wiki/WikiStart#pysynphot
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist = 
	numpy (>=1.5.1)
	astropy (>=0.3.1)
	stsci.distutils(>=0.3.7)

[files]
packages = pysynphot
data_files = 
	pysynphot/data = data/generic/* data/wavecat/*

[extension=pysynphot.pysynphot_utils]
sources = src/pysynphot_utils.c
include_dirs = numpy
optional = True
fail_message = 
	*********************************************************
	Build failed, trying without C extension.
	This removes no functionality but may affect performance.
	*********************************************************

[global]
setup-hooks = stsci.distutils.hooks.version_setup_hook
commands = stsci.distutils.command.build_optional_ext.build_optional_ext

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

[install_data]
pre-hook.glob-data-files = stsci.distutils.hooks.glob_data_files

[nosetests]
tests = test
include = ticket|cases|acs|nicmos|stis|wfc3_ir|wfc3_uvis1|wfc3_uvis2

